fixing problem with lable wrapping on configuration screen.  fixed this by truncating extra long post titles
git-svn-id: https://plugins.svn.wordpress.org/support-great-writers/trunk@262709 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/sgw_style.css
+++ b/css/sgw_style.css
@@ -1,15 +1,16 @@
 LABEL.sgw_label {
     float: left;
     font-weight: bold;
-    width: 250px;
+    width: 350px;
     text-align: right;
     padding-right: 10px;
+    clear:left;
 }
 LABEL.add_new {
   color: #21759B;
 }
 .sgw_input {
-  width: 500px;
+  width: 400px;
 }
 CODE {
   font-size: 14px;
